# todo

./: .gitignore
backend/: pyproject.toml  scripts.py  setup.cfg
backend/tests/: test_basic.py
frontend/: package-lock.json  package.json
infrastructure/: main.tf  secrets.auto.tfvars.vault  terraform.tfstate.vault
